# srsnewwebsite

./: .gitignore  Cargo.toml  Dockerfile  package.json  pnpm-lock.yaml  podman-compose.yml  readme.md  source-events.json  wrangler.toml  zola.toml
.github/workflows/: deploy-sstic.yml
content/events/: _index.md
content/pages/: codeofconduct.md  wherewestand.md
content/perspectives/: _index.md  borders.md  carpenters.md  sawant.md  sexwork.md
design-test/: zola.toml
design-test/content/system/: _index.md  markdown.md
design-test/styles/: style.css
design-test/templates/: base.html  component.html  contact.html  index.html
scripts/: build-styles.sh  generate-events.sh  generate_source_events.py
src/: lib.rs
styles/: style.css
templates/: article.html  base.html  calendar.html  codeofconduct.html  component.html  contact.html  events.html  index.html  perspectives.html  wherewestand.html
templates/shortcodes/: highlight.html
