[package]
name = "axum-on-workers"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8.5", features = ["http", "axum"] }
worker-macros = { version = "0.8.5", features = ["http"] }

axum = { version = "0.8", default-features = false, features = ['json', 'macros'] }
tower-service = "0.3.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.7.0" }
tower = "0.5.3"
# this leaves us a bit more open to a supply chain attack
axum-embed = { git = "https://github.com/informationsea/axum-embed.git" }
rust-embed = "8.12.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
